Navbar mobile fix spacing of icon and ellipses

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -932,9 +932,13 @@ label {
         max-width: unset;
         width: unset;
     }
-    .mobile-leftRight20 {
-        padding-left: 20px;
-        padding-right: 20px;
+    .mobile-leftRight12 {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+    .mobile-leftRight15 {
+        padding-left: 15px;
+        padding-right: 15px;
     }
     #content > div:first-child {
         margin-top: 5px;
